update user-controllers and swagger
