# routes/api/user.router.js
@@ -5,19 +5,17 @@ const wrapper = require("../../helpers/controllerWrappers");
 const auth = require("../../middlewares/authMiddleware");
 const uploadFile = require("../../middlewares/uploadFiles");
 
-router.post("/pets",  controllers.addMyPet);
+router.post("/pets",  wrapper(auth), controllers.addMyPet);
 
-router.get("/pets",  controllers.getListPets);
+router.put("/pets/:id",  wrapper(auth), controllers.updateMyPet);
 
-router.put("/pets/:id",  controllers.updateMyPet);
+router.delete("/pets/:id",  wrapper(auth), controllers.deleteMyPet);
 
-router.delete("/pets/:id",  controllers.deleteMyPet);
+router.get("/current",  wrapper(auth), controllers.currentUser);
 
-router.get("/current",  controllers.currentUser);
+router.put("/current",  wrapper(auth), controllers.updateInfoCurrentUser);
 
-router.put("/current",  controllers.updateInfoCurrentUser);
-
-router.patch("/avatar", uploadFile.single("avatar"), controllers.uploadImage);
+router.patch("/avatar", wrapper(auth), uploadFile.single("avatar"), controllers.uploadImage);
 
 router.patch("/favoriteNotices/:noticeId", wrapper(auth), controllers.favoriteNotices);
 
